# skwd-ai-bridge

./: .env.example  .gitignore  README.md  bridge-service-spec.md  pyproject.toml
infra/: skwd-ai-architecture.md
infra/migrations/: 001_initial_schema.sql  002_views.sql  003_seed_data.sql
reference/: 003_seed_data.sql
src/bridge/: config.py  db.py  emoji_map.py  formatter.py  main.py  poller.py  router.py  slack_client.py  webhook.py
tests/: conftest.py  test_emoji_map.py  test_formatter.py  test_poller.py  test_router.py  test_slack_client.py  test_webhook.py
