[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skwd-ai-bridge"
version = "0.1.0"
description = "Bridge between agent_messages (Postgres) and Slack."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.34",
    "asyncpg>=0.30",
    "slack-sdk>=3.34",
    "python-json-logger>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "mypy>=1.13",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# Long lines OK in formatter fixtures — they mirror seed data verbatim.
"tests/test_formatter.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["bridge"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true
